S2/linz: rows + contract §7 cite + gate-2 spec (RR-016 RESOLVED, RR-004 linz flip)
- RR-016 -> RESOLVED: the Session-1 "never runs in CI" evidence is stale (Go +
  gate-1 step b wire the self-tests, now 7/7); contract §7 fixed by the A5 pass;
  discrimination gates + matrix + sim-history bridge re-run (drains RR-028).
- RR-004 resolution cell: append the B5 linz flip evidence (200=>:ok unmodified
  faulted run + 8/8 matrix LINEARIZABLE; CheckerSelfTest 7a/7b); STATUS ->
  RESOLVED on the ack-model axis; the one residual (W-1 owner-thread violation
  test) is re-owned to B7, not a linz item.
- contract §7: fix sim-complement drift — cite the real AdversarialSim/OpHistoryTest
  emitter + configd-linz SimHistoryCheck bridge (was naming the legacy
  ConsistencyPropertyTests.LinearizabilityTest).
- linz-plan.md: append the gate-2 step spec (self-tests / sim-history / N-seed
  nightly faulted run) for the gate-2 assembler to consume verbatim.

second-agent verification owed (Session-2 rule 7).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>